<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="stringWelcomeAndRules">Welcome to the Guess My Number game! Keep guessing until you find the random number. There are two rounds, how quickly can you find the numbers? (Numbers are between 1 and 10, including 1 and 10)</string>
    <string name="stringUserGuessHint">Your guess</string>
    <string name="stringSubmit">Submit guess</string>
    <string name="stringNext">Next</string>
    <string name="title_activity_page_two">PageTwo</string>
    <string name="stringRulesPageTwo">This is round 2! The number is now between 1 and 20 (Again, 1 and 20 are included).</string>
    <string name="stringEnd">End</string>
    <string name="title_activity_test">Test</string>

</resources>
