<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.game.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textViewWelcomeAndRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/stringWelcomeAndRules" />

    <EditText
        android:id="@+id/editTextUserGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/stringUserGuessHint"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewRightWrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextUserGuess"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="Guess:" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUserGuess"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/stringSubmit" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/stringNext" 
        android:visibility="invisible" 
        android:onClick="nextPage"/>

</RelativeLayout>

